Fix overflow

--- a/src/Lingvo.Presentation/wwwroot/css/app.css
+++ b/src/Lingvo.Presentation/wwwroot/css/app.css
@@ -3,6 +3,7 @@
 
 html, body {
     font-family: 'Roboto', sans-serif;
+    overflow: hidden;
 }
 
 h1:focus {
